# python-cli-demo

./: LICENSE  README.md  platform-mac.json  platform.json  pyproject.toml  r.txt  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md
notebook/: test.ipynb
notebook/.ipynb_checkpoints/: test-checkpoint.ipynb
src/: app.py
