[project]
name = "python_api_cli"
version = "0.0.1"
authors = [
  { name="S. Gao", email="xyz@gmail.com" },
]
description = "A demo project about how to use pex to patch project"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aigaosheng/python-cli-demo"

[project.scripts]
adder = "app:run"